# openmind-conductor

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: baton.rs  ensemble.rs  harmony.rs  lib.rs  main.rs  measure.rs  memory.rs  score.rs  trit.rs
tests/: integration.rs
