[package]
name = "openmind-conductor"
version = "0.1.0"
description = "Multi-agent orchestration with shared muscle memory — the prefrontal cortex for coordinated agents"
edition = "2021"
repository = "https://github.com/SuperInstance/openmind-conductor"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
